maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:12: error: not found: value x
	setIndication(x-1,y,1)
                      ^