maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
	for (i <- 0 to getMondeLargeur()-1) {
		for (j <- 0 to getMondeHauteur()-1) {
			if (aBiscuit(i,j)) {
				val x = i
				val y = j
				setIndication(x,y,0)
			}
		}
	}
	setIndication(x-1,y,1)
}
